fixed volume collapse not allow editing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -66,23 +66,9 @@ div {
     justify-content: center;
 }
 
-details {
-    border: 1px solid rgba(0, 0, 0, .125);
+.volume-header {
     border-radius: 5px;
     margin-bottom: 10px;
-}
-
-details>summary {
-    list-style-type: '';
-}
-
-details[open]>summary {
-    list-style-type: '';
-}
-
-summary {
-    padding: 8px 16px;
-    background-color: rgba(0, 0, 0, .03);
 }
 
 .chapter-li {
